--- a/Deep_Impressionist_Ensemble.ipynb
+++ b/Deep_Impressionist_Ensemble.ipynb
@@ -2,13 +2,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QV_qhAwO5Xa1",
-        "outputId": "ff6bc02c-9fc5-4909-9fec-0bed5934ebd1"
+        "outputId": "6bf2b17b-09c7-481c-cd51-133e6d3f5d90"
       },
       "outputs": [
         {
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "6kEhyBVL5vYa"
       },
@@ -40,13 +40,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "btPyFN_M59BR",
-        "outputId": "29f50f91-3af8-44b4-cc4d-fad5a464e63b"
+        "outputId": "4e50a05f-bea0-4e1e-fcb6-dee2320d0671"
       },
       "outputs": [
         {
@@ -54,8 +54,8 @@
           "name": "stdout",
           "text": [
             "Downloading impressionist-classifier-data.zip to /content\n",
-            "100% 2.18G/2.19G [01:50<00:00, 20.5MB/s]\n",
-            "100% 2.19G/2.19G [01:50<00:00, 21.1MB/s]\n",
+            "100% 2.19G/2.19G [01:38<00:00, 25.6MB/s]\n",
+            "100% 2.19G/2.19G [01:38<00:00, 23.9MB/s]\n",
             "Archive:  impressionist-classifier-data.zip\n",
             "  inflating: training/training/Cezanne/215457.jpg  \n",
             "  inflating: training/training/Cezanne/215458.jpg  \n",
@@ -5045,7 +5045,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "0Ue3xOiG6Axu"
       },
@@ -5095,12 +5095,12 @@
       "metadata": {
         "id": "xafbuYN8t6Cy"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "3iWHFUOWlpDM"
       },
@@ -5112,13 +5112,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "AdlFf5-v6_JN",
-        "outputId": "f29b88d9-eeb8-4dd6-8084-af0dc893512d"
+        "outputId": "7425626e-e7b1-463a-d43c-a815224c0b1a"
       },
       "outputs": [
         {
@@ -5131,10 +5131,7 @@
         }
       ],
       "source": [
-        "transformation = Compose([\n",
-        "    Resize((256,256)),\n",
-        "    ToTensor()\n",
-        "])\n",
+        "transformation = Compose([Resize((256,256)), ToTensor()])\n",
         "transformation_train = Compose([\n",
         "    torchvision.transforms.Resize((256,256)),\n",
         "    torchvision.transforms.ColorJitter(hue=.05, saturation=.05),\n",
@@ -5151,7 +5148,8 @@
         "size_test_from_validation = int(size_all_validation * 0.5)\n",
         "size_validation = size_all_validation - size_test_from_validation\n",
         "\n",
-        "image_datasets['validation'], image_datasets['testing'] = random_split(image_datasets['validation'], [size_validation, size_test_from_validation], generator=Generator().manual_seed(SEED))\n",
+        "image_datasets['validation'], image_datasets['testing'] = random_split(image_datasets['validation'], [size_validation, size_test_from_validation], \n",
+        "                                                                       generator=Generator().manual_seed(SEED))\n",
         "\n",
         "BS = 32\n",
         "dataloaders = {x: DataLoader(image_datasets[x], batch_size=BS, shuffle=True) for x in ['training', 'validation', 'testing']}\n",
@@ -5175,24 +5173,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
-        "id": "bEwU1RFEuo6n",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "eed1693b-8085-44ef-eff2-0147654c32b4"
+        "id": "bEwU1RFEuo6n"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Downloading: \"https://download.pytorch.org/models/resnet50-11ad3fa6.pth\" to /root/.cache/torch/hub/checkpoints/resnet50-11ad3fa6.pth\n",
-            "100%|██████████| 97.8M/97.8M [00:00<00:00, 229MB/s]\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# define the model to have the pre-trained resnet 50 parameters\n",
         "model1 = torchvision.models.resnet50(weights=ResNet50_Weights.DEFAULT)\n",
@@ -5204,7 +5189,7 @@
         "  for i in [4]:\n",
         "    if name.startswith(f'layer{i}'):\n",
         "      param.requires_grad = True\n",
-        "# EDIT DROPOUT RATE HERE (dropout actually doesn't help here, so let's use L2 regularization instead)\n",
+        "# EDIT DROPOUT RATE HERE\n",
         "DO = 0.0\n",
         "# construct the fully connected head which will receive the flattened convolutional output\n",
         "model1.fc = nn.Sequential(\n",
@@ -5235,9 +5220,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WheadXFlzUTn",
-        "outputId": "be71bf63-1aae-44c1-ebc4-32924ae7dba1"
+        "outputId": "53ffc181-3068-494a-802d-12ace90d5cb6"
       },
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5247,7 +5232,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 36
         }
       ]
     },
@@ -5262,24 +5247,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
-        "id": "sIYLbdexlPJN",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "cebbf2e7-53d3-4b6b-db5e-79f2df2a9c37"
+        "id": "sIYLbdexlPJN"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Downloading: \"https://download.pytorch.org/models/efficientnet_b0_rwightman-3dd342df.pth\" to /root/.cache/torch/hub/checkpoints/efficientnet_b0_rwightman-3dd342df.pth\n",
-            "100%|██████████| 20.5M/20.5M [00:00<00:00, 69.0MB/s]\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "SEED = 6050\n",
         "setup_seed(SEED)\n",
@@ -5328,9 +5300,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zjup1O__zVGK",
-        "outputId": "e7b6df9e-ec57-4424-f372-b35ee9de2b07"
+        "outputId": "a8d87656-4b04-45d5-df9c-9d31c56517fb"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5340,7 +5312,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 29
         }
       ]
     },
@@ -5355,13 +5327,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "px9baSEPQG8S",
-        "outputId": "1fe17197-45fe-4b40-e911-ac294f92cdfc"
+        "outputId": "ac0b38d7-047e-42f0-a81d-c31dd969fbd6"
       },
       "outputs": [
         {
@@ -5369,21 +5341,18 @@
           "name": "stdout",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting googlenet_pytorch\n",
-            "  Downloading googlenet_pytorch-0.3.0-py2.py3-none-any.whl (13 kB)\n",
+            "Requirement already satisfied: googlenet_pytorch in /usr/local/lib/python3.9/dist-packages (0.3.0)\n",
             "Requirement already satisfied: torch in /usr/local/lib/python3.9/dist-packages (from googlenet_pytorch) (2.0.0+cu118)\n",
-            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.9/dist-packages (from torch->googlenet_pytorch) (4.5.0)\n",
-            "Requirement already satisfied: sympy in /usr/local/lib/python3.9/dist-packages (from torch->googlenet_pytorch) (1.11.1)\n",
-            "Requirement already satisfied: triton==2.0.0 in /usr/local/lib/python3.9/dist-packages (from torch->googlenet_pytorch) (2.0.0)\n",
             "Requirement already satisfied: networkx in /usr/local/lib/python3.9/dist-packages (from torch->googlenet_pytorch) (3.1)\n",
+            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.9/dist-packages (from torch->googlenet_pytorch) (4.5.0)\n",
+            "Requirement already satisfied: triton==2.0.0 in /usr/local/lib/python3.9/dist-packages (from torch->googlenet_pytorch) (2.0.0)\n",
             "Requirement already satisfied: jinja2 in /usr/local/lib/python3.9/dist-packages (from torch->googlenet_pytorch) (3.1.2)\n",
             "Requirement already satisfied: filelock in /usr/local/lib/python3.9/dist-packages (from torch->googlenet_pytorch) (3.11.0)\n",
-            "Requirement already satisfied: lit in /usr/local/lib/python3.9/dist-packages (from triton==2.0.0->torch->googlenet_pytorch) (16.0.1)\n",
+            "Requirement already satisfied: sympy in /usr/local/lib/python3.9/dist-packages (from torch->googlenet_pytorch) (1.11.1)\n",
             "Requirement already satisfied: cmake in /usr/local/lib/python3.9/dist-packages (from triton==2.0.0->torch->googlenet_pytorch) (3.25.2)\n",
+            "Requirement already satisfied: lit in /usr/local/lib/python3.9/dist-packages (from triton==2.0.0->torch->googlenet_pytorch) (16.0.1)\n",
             "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.9/dist-packages (from jinja2->torch->googlenet_pytorch) (2.1.2)\n",
-            "Requirement already satisfied: mpmath>=0.19 in /usr/local/lib/python3.9/dist-packages (from sympy->torch->googlenet_pytorch) (1.3.0)\n",
-            "Installing collected packages: googlenet_pytorch\n",
-            "Successfully installed googlenet_pytorch-0.3.0\n"
+            "Requirement already satisfied: mpmath>=0.19 in /usr/local/lib/python3.9/dist-packages (from sympy->torch->googlenet_pytorch) (1.3.0)\n"
           ]
         }
       ],
@@ -5393,35 +5362,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uvf-gRBtP9y3",
-        "outputId": "5ba95841-7f67-46dd-c04a-3894548524bc"
+        "outputId": "5795a608-d535-4f08-d9d4-3e4cdd39cc70"
       },
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Downloading: \"https://download.pytorch.org/models/googlenet-1378be20.pth\" to /root/.cache/torch/hub/checkpoints/googlenet-1378be20.pth\n",
-            "100%|██████████| 49.7M/49.7M [00:00<00:00, 263MB/s]"
-          ]
-        },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Loaded pretrained weights for googlenet\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\n"
           ]
         }
       ],
@@ -5476,9 +5430,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Hcpbg1jBzvQW",
-        "outputId": "b4595d05-6dea-4b58-8536-09fa1acdd913"
+        "outputId": "c1fb30cb-d872-457c-e2f7-f84a4e21b9fd"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5488,7 +5442,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 32
         }
       ]
     },
@@ -5516,6 +5470,7 @@
         "  # set model to evaluate model\n",
         "  model1.eval()\n",
         "  model2.eval()\n",
+        "  model3.eval()\n",
         "\n",
         "  # iterate over the data and compute the performance metrics\n",
         "  with torch.no_grad():\n",
@@ -5546,16 +5501,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "86c9f223-44d0-4b1e-8ed0-a36b64c782f4"
+        "outputId": "1c65a9fd-411a-49f9-a1b2-c8822a65510a"
       },
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Test Error: \n",
-            " Accuracy: 87.7%, Avg loss: 0.425930 \n",
+            " Accuracy: 88.5%, Avg loss: 0.413374 \n",
             "\n"
           ]
         }
